# homework14

./: .example.env  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/versions/: 1c6f1ce08341_update.py  43d62cd84c75_update.py  48048eb5c920_init.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/: schemas.py  test.py
src/db/: db.py  models.py
src/repository/: users.py
src/routers/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_contacts.py  test_unit_repository_users.py
